Fix button display on small screens

--- a/style.css
+++ b/style.css
@@ -37,9 +37,7 @@ p {
   margin-top: 5rem;
 }
 
-#generate-btn,
-#rules-btn,
-#copy-url-btn {
+#generate-btn {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: rgba(125, 42, 157, 0.6);
@@ -52,6 +50,20 @@ p {
   font-size: clamp(0.5rem, 7vw, 1.2rem) !important;
 }
 
+#rules-btn,
+#copy-url-btn {
+  margin-top: 10px;
+  padding: 5px 5px;
+  background-color: rgba(125, 42, 157, 0.6);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 8rem;
+  margin: auto;
+  font-size: clamp(0.5rem, 7vw, 1rem) !important;
+}
+
 #generate-btn:hover,
 #rules-btn:hover,
 #copy-url-btn:hover {
@@ -61,6 +73,7 @@ p {
 .button-container {
   display: flex;
   justify-content: space-between;
+  gap: 1px;
 }
 
 #music,
